standards/gnds-2.0/try/c/src/v2.0/pops/DecayData.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// DecayData is the basic handle type in this file. Example:
//    // Create a default DecayData object:
//    DecayData handle = DecayDataDefault();
// Functions involving DecayData are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_POPS_DECAYDATA
#define C_INTERFACE_TRY_V2_0_POPS_DECAYDATA

#include "GNDStk.h"
#include "v2.0/pops/DecayModes.h"
#include "v2.0/pops/AverageEnergies.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct DecayDataClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ DecayData
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct DecayDataClass *DecayData;

// --- Const-aware handles.
typedef const struct DecayDataClass *const ConstHandle2ConstDecayData;
typedef       struct DecayDataClass *const ConstHandle2DecayData;
typedef const struct DecayDataClass *      Handle2ConstDecayData;
typedef       struct DecayDataClass *      Handle2DecayData;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstDecayData
DecayDataDefaultConst();

// +++ Create, default
extern_c Handle2DecayData
DecayDataDefault();

// --- Create, general, const
extern_c Handle2ConstDecayData
DecayDataCreateConst(
   ConstHandle2ConstDecayModes decayModes,
   ConstHandle2ConstAverageEnergies averageEnergies
);

// +++ Create, general
extern_c Handle2DecayData
DecayDataCreate(
   ConstHandle2ConstDecayModes decayModes,
   ConstHandle2ConstAverageEnergies averageEnergies
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
DecayDataAssign(ConstHandle2DecayData This, ConstHandle2ConstDecayData from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
DecayDataDelete(ConstHandle2ConstDecayData This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
DecayDataRead(ConstHandle2DecayData This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
DecayDataWrite(ConstHandle2ConstDecayData This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
DecayDataPrint(ConstHandle2ConstDecayData This);

// +++ Print to standard output, as XML
extern_c int
DecayDataPrintXML(ConstHandle2ConstDecayData This);

// +++ Print to standard output, as JSON
extern_c int
DecayDataPrintJSON(ConstHandle2ConstDecayData This);


// -----------------------------------------------------------------------------
// Child: decayModes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DecayDataDecayModesHas(ConstHandle2ConstDecayData This);

// --- Get, const
extern_c Handle2ConstDecayModes
DecayDataDecayModesGetConst(ConstHandle2ConstDecayData This);

// +++ Get, non-const
extern_c Handle2DecayModes
DecayDataDecayModesGet(ConstHandle2DecayData This);

// +++ Set
extern_c void
DecayDataDecayModesSet(ConstHandle2DecayData This, ConstHandle2ConstDecayModes decayModes);


// -----------------------------------------------------------------------------
// Child: averageEnergies
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DecayDataAverageEnergiesHas(ConstHandle2ConstDecayData This);

// --- Get, const
extern_c Handle2ConstAverageEnergies
DecayDataAverageEnergiesGetConst(ConstHandle2ConstDecayData This);

// +++ Get, non-const
extern_c Handle2AverageEnergies
DecayDataAverageEnergiesGet(ConstHandle2DecayData This);

// +++ Set
extern_c void
DecayDataAverageEnergiesSet(ConstHandle2DecayData This, ConstHandle2ConstAverageEnergies averageEnergies);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif